--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
         </div>
         <div></div>
     </div>
+    <!-- Results -->
+    <div 
+    id="displayText"
+    style="
+    position: absolute; 
+    color: white;  
+    align-items: center; 
+    justify-content: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none"
+    >tie</div>
     <canvas></canvas>
 </div>
 
